--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,4 @@ edition = "2021"
 [dependencies]
 regex = "1.7.0"
 user32-sys = "0.2.0"
-winapi = "0.3.9"
+winapi = { version = "0.3.9", features = ["winuser"] }
