--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+enable-ansi-support = "0.1.2"
 regex = "1.7.0"
 user32-sys = "0.2.0"
 winapi = { version = "0.3.9", features = ["winuser"] }
